Fix letter spacing

--- a/src/base-styles/type.css
+++ b/src/base-styles/type.css
@@ -4,7 +4,6 @@
   font-style: normal;
   font-size: 52px;
   font-weight: 700;
-  letter-spacing: 3;
   text-align: center;
   text-transform: uppercase;
 }
