--- a/src/components/Intro/Intro.module.css
+++ b/src/components/Intro/Intro.module.css
@@ -7,6 +7,7 @@
 .headline {
   composes: headline from '../../base-styles/type.css';
   border: 7px solid #db4839;
+  letter-spacing: 3;
   margin-bottom: 30px;
   margin-top: 100px;
   padding: 35px;
